<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bcit.ass1.lowenstein_wu.InputActivity"
    tools:layout_editor_absoluteY="73dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:layout_marginEnd="44dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/conversionOptions"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="147dp"
        android:layout_marginStart="147dp"
        android:entries="@array/conversion"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="227dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/userValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_text"
        android:inputType="number"
        android:layout_marginEnd="7dp"
        app:layout_constraintRight_toLeftOf="@+id/convert"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/convert"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="88dp"
        app:layout_constraintTop_toTopOf="@+id/conversionOptions" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
